--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0;url=http://hainm.github.io/nglview/latest/index.html">
+        <meta http-equiv="refresh" content="0;url=http://arose.github.io/nglview/latest/index.html">
         <title>Page Redirection</title>
     </head>
     <body>
