--- a/latest/_modules/index.html
+++ b/latest/_modules/index.html
@@ -123,10 +123,7 @@
            <div itemprop="articleBody">
             
   <h1>All modules for which code is available</h1>
-<ul><li><a href="ipywidgets/widgets/trait_types.html">ipywidgets.widgets.trait_types</a></li>
-<li><a href="ipywidgets/widgets/widget.html">ipywidgets.widgets.widget</a></li>
-<li><a href="nglview.html">nglview</a></li>
-<li><a href="traitlets/config/configurable.html">traitlets.config.configurable</a></li>
+<ul><li><a href="nglview.html">nglview</a></li>
 <li><a href="traitlets/traitlets.html">traitlets.traitlets</a></li>
 </ul>
 
