--- a/latest/_modules/nglview.html
+++ b/latest/_modules/nglview.html
@@ -894,7 +894,7 @@
 <span class="sd">        transparent : bool, default False</span>
 
 <span class="sd">        Example</span>
-<span class="sd">        --------</span>
+<span class="sd">        -------</span>
 <span class="sd">        &gt;&gt;&gt; # tell NGL to render send image data to notebook.</span>
 <span class="sd">        &gt;&gt;&gt; view.export_image()</span>
 
