--- a/latest/genindex.html
+++ b/latest/genindex.html
@@ -9,7 +9,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>Index &mdash; NGLView 0.5 documentation</title>
+  <title>Index &mdash; NGLView 0.4+143.gb7c70d5 documentation</title>
   
 
   
@@ -31,7 +31,7 @@
   
 
   
-    <link rel="top" title="NGLView 0.5 documentation" href="index.html"/> 
+    <link rel="top" title="NGLView 0.4+143.gb7c70d5 documentation" href="index.html"/> 
 
   
   <script src="_static/js/modernizr.min.js"></script>
@@ -593,7 +593,7 @@
     <script type="text/javascript">
         var DOCUMENTATION_OPTIONS = {
             URL_ROOT:'./',
-            VERSION:'0.5',
+            VERSION:'0.4+143.gb7c70d5',
             COLLAPSE_INDEX:false,
             FILE_SUFFIX:'.html',
             HAS_SOURCE:  true
