--- a/latest/index.html
+++ b/latest/index.html
@@ -8,7 +8,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>Table of contents &mdash; NGLView 0.4+143.gb7c70d5 documentation</title>
+  <title>Table of contents &mdash; NGLView 0.4+149.g419194b documentation</title>
   
 
   
@@ -30,7 +30,7 @@
   
 
   
-    <link rel="top" title="NGLView 0.4+143.gb7c70d5 documentation" href="#"/> 
+    <link rel="top" title="NGLView 0.4+149.g419194b documentation" href="#"/> 
 
   
   <script src="_static/js/modernizr.min.js"></script>
@@ -322,7 +322,7 @@ available <code class="docutils literal"><span class="pre">type</span></code> an
     <script type="text/javascript">
         var DOCUMENTATION_OPTIONS = {
             URL_ROOT:'./',
-            VERSION:'0.4+143.gb7c70d5',
+            VERSION:'0.4+149.g419194b',
             COLLAPSE_INDEX:false,
             FILE_SUFFIX:'.html',
             HAS_SOURCE:  true
