--- a/latest/two_windows.html
+++ b/latest/two_windows.html
@@ -126,7 +126,7 @@
            <div itemprop="articleBody">
             
   <p id="two-windows">A picture is worth a thousand words</p>
-<p>..image:: images/nglview_2windows.png</p>
+<img alt="_images/nglview_2windows.png" src="_images/nglview_2windows.png" />
 
 
            </div>
