--- a/latest/_modules/index.html
+++ b/latest/_modules/index.html
@@ -8,7 +8,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>Overview: module code &mdash; NGLView 0.4+176.ge8dce0d.dirty documentation</title>
+  <title>Overview: module code &mdash; NGLView 0+unknown documentation</title>
   
 
   
@@ -30,7 +30,7 @@
   
 
   
-    <link rel="top" title="NGLView 0.4+176.ge8dce0d.dirty documentation" href="../index.html"/> 
+    <link rel="top" title="NGLView 0+unknown documentation" href="../index.html"/> 
 
   
   <script src="../_static/js/modernizr.min.js"></script>
@@ -157,7 +157,7 @@
     <script type="text/javascript">
         var DOCUMENTATION_OPTIONS = {
             URL_ROOT:'../',
-            VERSION:'0.4+176.ge8dce0d.dirty',
+            VERSION:'0+unknown',
             COLLAPSE_INDEX:false,
             FILE_SUFFIX:'.html',
             HAS_SOURCE:  true
