--- a/latest/search.html
+++ b/latest/search.html
@@ -8,7 +8,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>Search &mdash; NGLView 0+unknown documentation</title>
+  <title>Search &mdash; NGLView 0.4+222.gcc1018c documentation</title>
   
 
   
@@ -30,7 +30,7 @@
   
 
   
-    <link rel="top" title="NGLView 0+unknown documentation" href="index.html"/> 
+    <link rel="top" title="NGLView 0.4+222.gcc1018c documentation" href="index.html"/> 
 
   
   <script src="_static/js/modernizr.min.js"></script>
@@ -164,7 +164,7 @@
     <script type="text/javascript">
         var DOCUMENTATION_OPTIONS = {
             URL_ROOT:'./',
-            VERSION:'0+unknown',
+            VERSION:'0.4+222.gcc1018c',
             COLLAPSE_INDEX:false,
             FILE_SUFFIX:'.html',
             HAS_SOURCE:  true
