--- a/latest/py-modindex.html
+++ b/latest/py-modindex.html
@@ -8,7 +8,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>Python Module Index &mdash; NGLView 0.4+222.gcc1018c documentation</title>
+  <title>Python Module Index &mdash; NGLView 0.5+48.g9db701e documentation</title>
   
 
   
@@ -30,7 +30,7 @@
   
 
   
-    <link rel="top" title="NGLView 0.4+222.gcc1018c documentation" href="index.html"/>
+    <link rel="top" title="NGLView 0.5+48.g9db701e documentation" href="index.html"/>
  
 
     <script type="text/javascript">
@@ -178,7 +178,7 @@
     <script type="text/javascript">
         var DOCUMENTATION_OPTIONS = {
             URL_ROOT:'./',
-            VERSION:'0.4+222.gcc1018c',
+            VERSION:'0.5+48.g9db701e',
             COLLAPSE_INDEX:false,
             FILE_SUFFIX:'.html',
             HAS_SOURCE:  true
