--- a/latest/api.html
+++ b/latest/api.html
@@ -8,7 +8,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>Welcome to NGLView’s documentation! &mdash; NGLView 0.5+48.g9db701e documentation</title>
+  <title>Welcome to NGLView’s documentation! &mdash; NGLView 0.4+232.g9b37613 documentation</title>
   
 
   
@@ -30,7 +30,7 @@
   
 
   
-    <link rel="top" title="NGLView 0.5+48.g9db701e documentation" href="index.html"/> 
+    <link rel="top" title="NGLView 0.4+232.g9b37613 documentation" href="index.html"/> 
 
   
   <script src="_static/js/modernizr.min.js"></script>
@@ -867,7 +867,7 @@ gro, mol2, sdf.</p>
     <script type="text/javascript">
         var DOCUMENTATION_OPTIONS = {
             URL_ROOT:'./',
-            VERSION:'0.5+48.g9db701e',
+            VERSION:'0.4+232.g9b37613',
             COLLAPSE_INDEX:false,
             FILE_SUFFIX:'.html',
             HAS_SOURCE:  true
